[ES5] Fixed .separator rows being counted as tests.
Close #849. Also fixes the significance circles not showing up on ES5.

--- a/master.css
+++ b/master.css
@@ -57,30 +57,22 @@ td {
 body:not(.es6) td {
     padding-left:0.5rem;
 }
-.es6 [significance] td:first-child:before,
-.es2016plus [significance] td:first-child:before,
-.esnext [significance] td:first-child:before {
+body:not(.esintl):not(.non-standard) td:first-child:before {
     content: "⬤";
     opacity:0.2;
     width:1.5rem;
     text-align:center;
     display:inline-block;
 }
-.es6 [significance="0.125"]  td:first-child:before,
-.es2016plus [significance="0.125"]  td:first-child:before,
-.esnext [significance="0.125"]  td:first-child:before {
+body:not(.esintl):not(.non-standard) [significance="0.125"]  td:first-child:before {
     content: "⬤";
     font-size:3px;
 }
-.es6 [significance="0.25"] td:first-child:before,
-.es2016plus [significance="0.25"] td:first-child:before,
-.esnext [significance="0.25"] td:first-child:before {
+body:not(.esintl):not(.non-standard) [significance="0.25"] td:first-child:before {
     content: "⬤";
     font-size:6px;
 }
-.es6 [significance="0.5"] td:first-child:before,
-.es2016-plus [significance="0.5"] td:first-child:before,
-.esnext [significance="0.5"] td:first-child:before {
+body:not(.esintl):not(.non-standard) [significance="0.5"] td:first-child:before {
     content: "⬤";
     font-size:9px;
 }
